ajout du mot cellule

--- a/Quatrieme/proportionnalite.tex
+++ b/Quatrieme/proportionnalite.tex
@@ -126,7 +126,7 @@ Le tableau suivant indique le prix en euros de certaines quantités de pêches e
 Quelle formule, peut-on entrer dans la cellule $E2$ afin obtenir les prix correspondants par recopie sur la droite de la plage $E2\negthinspace:I2$ ? 
   
 
-% il faut ajouter les 2 dollars pour appeler la B3 du coefficient de proportionnalité
+% il faut ajouter les 2 dollars pour appeler la cellule B3 du coefficient de proportionnalité
 % =E$1*$B$3
 
 \item Générer le tableau à l'aide d'un tableur.
